@@ -128,7 +128,7 @@
             </center>
         </div>
     </div>
-    <div id="footer">to enjoy this game bug-free, please use the <a id="footera" href="https://www.google.com/intl/en/chrome/browser/" target="_blank">Google Chrome</a> browser<br>
+    <div id="footer">to enjoy this game bug-free, please use <a id="footera" href="http://abetterbrowser.org" target="_blank">a better browser</a><br>
                       to test our system we have <a target="_blank" id="footera" href="test/manual_test_scripts.html">a few tests</a> anyone can walk through</div>
     <div style="position:absolute;right:5px;bottom:5px;">
     <a href="http://www.w3.org/html/logo/" target="_blank"><img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics-storage.png" width="98" height="32" alt="HTML5 Powered with CSS3 / Styling, Semantics, and Offline &amp; Storage" title="HTML5 Powered with CSS3 / Styling, Semantics, and Offline &amp; Storage"></a>
