@@ -234,11 +234,10 @@ input[type=checkbox]
 {
     width: 26px;
     height: 26px;
-    padding: 0;
     margin-left:10px;
     vertical-align: bottom;
     position: relative;
-    top: -1px;
+    top:5px;
     *overflow: hidden;
   
 }
